# advent-of-code-2025

./: .clangd  CMakeLists.txt  README.md
include/day1/: dial.h
include/day2/: identify_invalid_ids.h
include/day3/: battery_activator.h
include/day4/: accessible_rolls_of_paper.h
include/day5/: fresh_ingredients.h
include/day6/: ceph_math_problems.h
include/day7/: teleporter.h
include/day8/: junction_boxes.h
include/day9/: red_tiles.h
include/util/: areana.h  banks_parser.h  ceph_math_parser.h  dial_sequence_parser.h  ids_parser.h  ingredients_parser.h  matrix.h  rolls_of_paper_parser.h  string.h  types.h
src/: main.c
src/day1/: dial.c
src/day2/: identify_invalid_ids.c
src/day3/: battery_activator.c
src/day4/: accessible_rolls_of_paper.c
src/util/: banks_parser.c  dial_sequence_parser.c  ids_parser.c  matrix.c  rolls_of_paper_parser.c
